# tello-control

./: .gitignore  README.md  pyproject.toml  readthedoc.yaml  readthedocs.yaml  requirements.txt
docs/: makeSource.bat  requirements.txt
docs/source/: conf.py  getting_started.rst  index.rst  intro.rst  logging.rst  matlab.rst  modules.rst  sensors.rst  tello_control.rst  tello_control.rst.bak  tello_ctrl.rst  video.rst
docs/source/_download/: exeDemo1_takeoff_land.m  exeDemo2_manual_control.m  exeDemo3_get_sensor_data.m  exeDemo4_timed_sensor_loop.m  exeDemo5_image_video.m  prg.m  python_record_video_log_data.py  python_takeoff_land.py  python_video.py
tello_control/: __init__.py  tello_control.py
tello_control/utils/: dispatcher.py  protocol.py  utils.py  video_stream.py
tello_ctrl/: __init__.py  tello_ctrl.py
tests/: logfile.txt  test2.csv  test_flight_command.ipynb  test_log.ipynb  test_video.ipynb  text_flight_command.py
tests/.ipynb_checkpoints/: demo-checkpoint.csv  logfile-checkpoint.txt  test_flight_command-checkpoint.ipynb  test_log-checkpoint.ipynb  test_log_video-checkpoint.ipynb  test_video-checkpoint.ipynb
